removed unnecessary sections, fixed layout issues

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -13,15 +13,14 @@
 }
 
 .site-title {
-  @include relative-font-size(1.625);
+  @include relative-font-size(1.425);
   font-weight: 300;
   letter-spacing: -1px;
   float: right;
-  font-size: 25px;
   bottom: 8px;
-
   a {
     color: $site-title-color;
+		text-decoration: none;
   }
 
   @include media-query($on-palm) {
@@ -71,7 +70,6 @@
     letter-spacing: 1px;
 		/* to overide link-base-color */
     text-decoration: none;
-
     // Gaps between nav items, but not on the last one
     &:not(:last-child) {
       margin-right: 20px;
@@ -99,10 +97,10 @@
 
     .page-link {
       display: inline;
-      font-size: large;
+      font-size: $large-font-size;
 
       &:not(:last-child) {
-        margin-right: 20px;
+        margin-right: 30px;
       }
       margin-left: auto;
     }
