--- a/_sass/minima/initialize.scss
+++ b/_sass/minima/initialize.scss
@@ -7,6 +7,7 @@ $code-font-family: "Menlo", "Inconsolata", "Consolas", "Roboto Mono", "Ubuntu Mo
 $base-font-size:   20px !default;
 $base-font-weight: 300 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
+$large-font-size:  $base-font-size * 1.225 !default;
 $base-line-height: 1.5 !default;
 
 $spacing-unit:     20px !default;
